test/scc/expr/semantic-errors/159.a
159.t:1:17: error: array of inappropriate type initialized from string constant